<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".EditNotes">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/all"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:text="@string/title" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:hint="@string/search"
        android:text="@string/search" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:text="@string/title" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:ems="10"
        android:hint="@string/content"
        android:inputType="text"
        android:text="@string/content" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:hint="@string/update"
        android:text="@string/update" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:hint="@string/delete"
        android:text="@string/delete" />
</LinearLayout>